--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,11 @@ on:
         required: true
         type: choice
         options:
+        - "horiMiya"
         - "summerTime"
         - "twinStar"
       EpCode:
-        description: "EpCode, 01..25..50"
+        description: "EpCode, 01..13/25/50"
         required: true
         type: number
       SpeedProf:
@@ -83,6 +84,9 @@ jobs:
           elif [[ ${AniCode} == "summerTime" ]]; then
             echo "AniName=Summer.Time.Rendering" >>$GITHUB_ENV
             echo "LocationOnIndex=td:/Summer.Time.Rendering.WEBRipZ" >>$GITHUB_ENV
+          elif [[ ${AniCode} == "horiMiya" ]]; then
+            echo "AniName=HoriMiya" >>$GITHUB_ENV
+            echo "LocationOnIndex=td:/HoriMiya.BDRipZ" >>$GITHUB_ENV
           fi
       - name: Create EncMatrix
         run: |
